2008-09-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ResourceFinder.cpp: fix problem
	with configuration options getting lost.  Add path
	for default config file to search path.


	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: add
	setDefaultConfigFile method, to specify a default for
	--from.

2008-09-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ResourceFinder.cpp: if "--context" is 
	specified on command line, it should take priority over other
	search paths.

2008-09-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarp-imageviewer/gCamView.cpp: tighten up yarpview some
	more; it is still reported to be flakey.

2008-09-02 Lorenzo Natale <nat@liralab.it>
	* src/libYARP_os/src/Run.cpp:
	added --verbose method, removed debug messages and a 
	bunch of carriage returns. Old, unused, run code moved
	to Run.bak

2008-09-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: note fix for assignment
	problem reported by yianding.

2008-08-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarp-imageviewer/YARPImgRecv.cpp: add missing checks
	for success of read on port

	* src/libYARP_dev/src/TestFrameGrabber.cpp: add [rand] mode
	(based on patch from Alessandro Scalzo)

	* src/libYARP_OS/harness/DgramTwoWayStreamTest.cpp: testing 
	the detection of corrupted datagrams.

2008-08-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: stop the character
	sequence "." from being interpreted as a number.

	* src/libYARP_OS/harness/ResourceFinderTest.cpp: start adding
	regression tests for ResourceFinder

	* src/libYARP_OS/src/ResourceFinder.cpp: implement "--from config.ini"
	for loading settings into ResourceFinder from a file.  This is
	like the "--file config.ini" behavior of the Module class and
	yarpdev etc.  The names are inconsistent for complicated reasons.

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: make ResourceFinder