@@ -1,5 +1,11 @@
 2008-09-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/libYARP_OS/include/yarp/Protocol.h: fix expectIndex; it
+	doesn't behave well when the underlying carrier has a transient
+	(as opposed to critical) failure.  This may be contributing to
+	problems seen with multicast transmission (see bug 2102263 on
+	sourceforge YARP page)
+
 	* src/libYARP_OS/src/ResourceFinder.cpp: fix problem
 	with configuration options getting lost.  Add path
 	for default config file to search path.
